--- a/style.css
+++ b/style.css
@@ -4,8 +4,6 @@ body{
 h1 {
 display: block;
 text-align: center;
-border-color: black;
-border-style: solid;
 height: 200px;
 width: 200px;
 background-color: yellow;
@@ -16,4 +14,13 @@ padding-left: 100px;
 padding-right: 100px;
 margin-left: auto;
 margin-right: auto;
+
+animation-name: shine;
+animation-duration: 18s;
+}
+
+@keyframes shine {
+0%   {background-color: skyblue; left:0px;}
+50%  {background-color:rgb(234, 235, 171); left:200px;}
+100% {background-color: yellow; left:0px;}
 }
