--- a/style.css
+++ b/style.css
@@ -1,26 +1,42 @@
-body{
-    background-color: lightskyblue;
+body {
+  background-color: lightskyblue;
 }
 h1 {
-display: block;
-text-align: center;
-height: 200px;
-width: 200px;
-background-color: yellow;
-border-radius: 50%;
-margin-top: 300px;
-padding-top: 200px;
-padding-left: 100px;
-padding-right: 100px;
-margin-left: auto;
-margin-right: auto;
+  display: block;
+  text-align: center;
+  height: 200px;
+  width: 200px;
+  background-color: yellow;
+  border-radius: 50%;
+  margin-top: 300px;
+  padding-top: 200px;
+  padding-left: 100px;
+  padding-right: 100px;
+  margin-left: auto;
+  margin-right: auto;
 
-animation-name: shine;
-animation-duration: 18s;
+  animation-name: shine;
+  animation-duration: 18s;
 }
 
 @keyframes shine {
-0%   {background-color: skyblue; left:0px;}
-50%  {background-color:rgb(234, 235, 171); left:200px;}
-100% {background-color: yellow; left:0px;}
+  0% {
+    background-color: skyblue;
+    left: 0px;
+  }
+  50% {
+    background-color: rgb(234, 235, 171);
+    left: 200px;
+  }
+  100% {
+    background-color: yellow;
+    left: 0px;
+  }
+}
+
+#grass {
+background-color: springgreen;
+margin-top: 50px;
+padding-top: 20px;
+padding-bottom: 20px;
 }
